kustomize/arr-stack/huntarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: huntarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`huntarr-k8s.vinicima.com`) || Host(`huntarr.vinicima.com`)
      kind: Rule
      services:
        - name: huntarr
          port: 9705
      middlewares:
        - name: body-size-50m
          namespace: traefik
  tls:
    secretName: vinicima-com-tls
